--- a/ASGDPR/ASGDPR/GDPRBoard.storyboard
+++ b/ASGDPR/ASGDPR/GDPRBoard.storyboard
@@ -4,13 +4,25 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="cZp-K0-OKU">
+            <objects>
+                <navigationController storyboardIdentifier="ASNavigationViewController" id="lqb-0M-6dE" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="cCL-Uw-gRc">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t24-3g-vYg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2391" y="-296"/>
+        </scene>
         <!--Privacy Controller-->
         <scene sceneID="8Ck-Ac-ii0">
             <objects>
@@ -19,26 +31,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCp-vA-qeO">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appodeal_header.png" translatesAutoresizingMaskIntoConstraints="NO" id="V9F-pc-Xp6">
-                                        <rect key="frame" x="16" y="10" width="221" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="V9F-pc-Xp6" secondAttribute="height" multiplier="265:60" id="3eN-rF-z86"/>
-                                            <constraint firstAttribute="height" constant="50" id="kN8-5y-d9h"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.93725490199999995" green="0.25490196079999999" blue="0.2301303733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="0jc-CR-Yx5"/>
-                                    <constraint firstItem="V9F-pc-Xp6" firstAttribute="centerY" secondItem="uCp-vA-qeO" secondAttribute="centerY" id="FFM-DB-xoh"/>
-                                    <constraint firstItem="V9F-pc-Xp6" firstAttribute="leading" secondItem="uCp-vA-qeO" secondAttribute="leading" constant="16" id="P4c-eA-zmx"/>
-                                </constraints>
-                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abn-iw-chs">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T1c-Ge-aWW">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="388.5"/>
@@ -130,23 +124,35 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="uCp-vA-qeO" firstAttribute="top" secondItem="ZOM-Us-Mo8" secondAttribute="top" id="8j4-6c-AES"/>
                             <constraint firstItem="abn-iw-chs" firstAttribute="trailing" secondItem="SXB-XV-xIR" secondAttribute="trailing" id="FZg-n1-3w2"/>
                             <constraint firstItem="abn-iw-chs" firstAttribute="leading" secondItem="SXB-XV-xIR" secondAttribute="leading" id="Un0-Lb-Agt"/>
-                            <constraint firstItem="uCp-vA-qeO" firstAttribute="leading" secondItem="SXB-XV-xIR" secondAttribute="leading" id="in7-yf-fnh"/>
+                            <constraint firstItem="abn-iw-chs" firstAttribute="top" secondItem="SXB-XV-xIR" secondAttribute="top" id="hYb-cy-vce"/>
                             <constraint firstItem="abn-iw-chs" firstAttribute="bottom" secondItem="SXB-XV-xIR" secondAttribute="bottom" id="rcU-gm-02n"/>
-                            <constraint firstItem="uCp-vA-qeO" firstAttribute="trailing" secondItem="SXB-XV-xIR" secondAttribute="trailing" id="tF8-qf-a22"/>
-                            <constraint firstItem="abn-iw-chs" firstAttribute="top" secondItem="uCp-vA-qeO" secondAttribute="bottom" id="u41-Zs-rsv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SXB-XV-xIR"/>
                     </view>
+                    <navigationItem key="navigationItem" id="HAd-Kz-0ox"/>
                     <connections>
                         <outlet property="agreeButton" destination="aoc-8U-bLj" id="uDk-Tc-3nT"/>
+                        <outlet property="header" destination="Zq4-6m-mb4" id="wxn-pS-5fj"/>
                         <outlet property="privacyTextView" destination="VJg-W3-agO" id="F8o-HX-lei"/>
                         <outlet property="rejectButton" destination="6eX-Lu-aMz" id="qo1-gf-ZSt"/>
+                        <segue destination="mU0-eA-E5b" kind="show" identifier="ConsentControllerSegue" id="mrz-Rp-FpE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j1y-Lx-oJe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="Zq4-6m-mb4">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="appodeal_header.png" translatesAutoresizingMaskIntoConstraints="NO" id="PeM-sO-QKY">
+                            <rect key="frame" x="2" y="2" width="180" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                    <viewLayoutGuide key="safeArea" id="qeP-6O-kHa"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="-1538.4000000000001" y="-295.50224887556226"/>
         </scene>
@@ -159,7 +165,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KWB-sG-zdj">
-                                <rect key="frame" x="16" y="70" width="343" height="490"/>
+                                <rect key="frame" x="16" y="28" width="343" height="532"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -190,33 +196,11 @@
                                     <action selector="closeAction:" destination="mU0-eA-E5b" eventType="touchUpInside" id="DgO-RI-DnE"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ysJ-Ec-72N">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appodeal_header.png" translatesAutoresizingMaskIntoConstraints="NO" id="jW4-C3-Xnh">
-                                        <rect key="frame" x="16" y="10" width="221" height="50"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="RmB-TT-9MB"/>
-                                            <constraint firstAttribute="width" secondItem="jW4-C3-Xnh" secondAttribute="height" multiplier="265:60" id="xxS-7I-C7P"/>
-                                        </constraints>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" red="0.93725490199999995" green="0.25490196079999999" blue="0.2301303733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="jW4-C3-Xnh" firstAttribute="leading" secondItem="ysJ-Ec-72N" secondAttribute="leading" constant="16" id="0IO-Im-YET"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="1Q5-Ak-Iyr"/>
-                                    <constraint firstAttribute="height" constant="70" id="D9C-bt-h8x"/>
-                                    <constraint firstItem="jW4-C3-Xnh" firstAttribute="centerY" secondItem="ysJ-Ec-72N" secondAttribute="centerY" id="dDl-xa-GY6"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="ysJ-Ec-72N" firstAttribute="leading" secondItem="c8O-QA-otz" secondAttribute="leading" id="2V1-Is-ge3"/>
-                            <constraint firstItem="ysJ-Ec-72N" firstAttribute="trailing" secondItem="c8O-QA-otz" secondAttribute="trailing" id="Cb0-k8-HFl"/>
-                            <constraint firstItem="ysJ-Ec-72N" firstAttribute="top" secondItem="pip-wL-1J5" secondAttribute="top" id="G0k-Jw-T1D"/>
+                            <constraint firstItem="KWB-sG-zdj" firstAttribute="top" secondItem="c8O-QA-otz" secondAttribute="top" constant="8" id="G2c-OC-heI"/>
                             <constraint firstItem="nvR-Aq-TJE" firstAttribute="leading" secondItem="c8O-QA-otz" secondAttribute="leading" constant="16" id="OIx-EY-dwQ"/>
-                            <constraint firstItem="KWB-sG-zdj" firstAttribute="top" secondItem="ysJ-Ec-72N" secondAttribute="bottom" id="Vmt-yq-PL1"/>
                             <constraint firstItem="nvR-Aq-TJE" firstAttribute="top" secondItem="9JU-O6-rH2" secondAttribute="bottom" constant="10" id="cSo-8R-Tdz"/>
                             <constraint firstItem="nvR-Aq-TJE" firstAttribute="centerX" secondItem="9JU-O6-rH2" secondAttribute="centerX" id="dCH-yJ-1RA"/>
                             <constraint firstItem="c8O-QA-otz" firstAttribute="trailing" secondItem="nvR-Aq-TJE" secondAttribute="trailing" constant="16" id="jqQ-bf-Is5"/>
@@ -229,40 +213,25 @@
                     </view>
                     <connections>
                         <outlet property="closeView" destination="9JU-O6-rH2" id="nRA-Qz-tLH"/>
+                        <outlet property="header" destination="2NT-HO-vzS" id="27C-5g-3bS"/>
                         <outlet property="privacyTextView" destination="KWB-sG-zdj" id="3gT-9p-Au7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nSR-7T-ow2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="2NT-HO-vzS">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="appodeal_header.png" translatesAutoresizingMaskIntoConstraints="NO" id="ChK-j0-8QN">
+                            <rect key="frame" x="2" y="2" width="180" height="40"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
+                    <viewLayoutGuide key="safeArea" id="la1-lU-Qok"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="-674.39999999999998" y="-296.40179910044981"/>
-        </scene>
-        <!--Blank Controller-->
-        <scene sceneID="Pvk-Sc-qDv">
-            <objects>
-                <viewController storyboardIdentifier="ASBlank" id="kGd-Fp-T07" customClass="ASBlankController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Awr-WQ-lzI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Opt out of Ads Personalization enabled. SDK not initializaed" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l8J-fu-f9F">
-                                <rect key="frame" x="16" y="36" width="343" height="41"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="wUq-hz-gW1" firstAttribute="trailing" secondItem="l8J-fu-f9F" secondAttribute="trailing" constant="16" id="MtE-Go-kxl"/>
-                            <constraint firstItem="l8J-fu-f9F" firstAttribute="leading" secondItem="wUq-hz-gW1" secondAttribute="leading" constant="16" id="Sxn-fp-oMe"/>
-                            <constraint firstItem="l8J-fu-f9F" firstAttribute="top" secondItem="wUq-hz-gW1" secondAttribute="top" constant="16" id="ol4-9a-Zos"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="wUq-hz-gW1"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="va5-2C-uDM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="80.799999999999997" y="-290.10494752623691"/>
         </scene>
     </scenes>
     <resources>
